Added chained vulns
